--- a/media/css/main.css
+++ b/media/css/main.css
@@ -60,18 +60,30 @@ a {
 .alert-success {
   background: url(../images/noiseGreen.png) repeat left center;
   color: #fff;
+  font-weight: bold;
+  text-shadow: 1px 1px 0.25em rgba(0, 0, 0, 0.5);
+  position: relative;
+  padding-left: 40px;
 }
-/* line 44, ../scss/main.scss */
+/* line 50, ../scss/main.scss */
 .alert-success:before {
   background: url(../images/noiseNotice.png) no-repeat left center;
   content: '';
   display: inline-block;
-  width: 34px;
-  height: 17px;
+  width: 28px;
+  height: 26px;
   vertical-align: text-bottom;
+  position: absolute;
+  left: 9px;
+  top: 11px;
+}
+/* line 62, ../scss/main.scss */
+.alert-success a {
+  text-decoration: underline;
+  color: #fff;
 }
 
-/* line 54, ../scss/main.scss */
+/* line 68, ../scss/main.scss */
 .content {
   background: url(../images/noiseGreyMedium.png) repeat left center #f3f3f3;
   border: 1px solid #dfdfdf;
@@ -82,12 +94,12 @@ a {
   position: relative;
 }
 
-/* line 64, ../scss/main.scss */
+/* line 78, ../scss/main.scss */
 .clr {
   clear: both;
 }
 
-/* line 68, ../scss/main.scss */
+/* line 82, ../scss/main.scss */
 h2 {
   padding: 0;
   margin: 0 0 0.5em 0;
@@ -96,12 +108,12 @@ h2 {
   color: #555;
   font-size: 1.8em;
 }
-/* line 76, ../scss/main.scss */
+/* line 90, ../scss/main.scss */
 h2 a {
   color: #767676;
 }
 
-/* line 81, ../scss/main.scss */
+/* line 95, ../scss/main.scss */
 ul.pageNav {
   display: inline-block;
   color: #7d7d7d;
@@ -110,33 +122,33 @@ ul.pageNav {
   padding: 0;
   font-weight: bold;
 }
-/* line 89, ../scss/main.scss */
+/* line 103, ../scss/main.scss */
 ul.pageNav.right {
   float: right;
   position: relative;
   left: 18px;
 }
-/* line 94, ../scss/main.scss */
+/* line 108, ../scss/main.scss */
 ul.pageNav.right li {
   padding: 0 0 0 0.5em;
 }
-/* line 99, ../scss/main.scss */
+/* line 113, ../scss/main.scss */
 ul.pageNav li {
   display: inline-block;
   padding: 0 0.5em 0 0;
   font-size: 0.8em;
 }
-/* line 104, ../scss/main.scss */
+/* line 118, ../scss/main.scss */
 ul.pageNav li a {
   color: #7d7d7d;
 }
-/* line 108, ../scss/main.scss */
+/* line 122, ../scss/main.scss */
 ul.pageNav li a:hover {
   background: url(../images/noiseBlue.png) repeat left center;
   text-decoration: none;
   color: #fff;
 }
-/* line 115, ../scss/main.scss */
+/* line 129, ../scss/main.scss */
 ul.pageNav li a, ul.pageNav li span {
   display: inline-block;
   padding: 0.5em 0.75em;
@@ -146,20 +158,20 @@ ul.pageNav li a, ul.pageNav li span {
   -o-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-/* line 121, ../scss/main.scss */
+/* line 135, ../scss/main.scss */
 ul.pageNav li.firstPage a:before {
   content: '<< ';
 }
-/* line 124, ../scss/main.scss */
+/* line 138, ../scss/main.scss */
 ul.pageNav li.lastPage a:after {
   content: ' >>';
 }
-/* line 128, ../scss/main.scss */
+/* line 142, ../scss/main.scss */
 ul.pageNav li.curPage span {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
 
-/* line 173, ../scss/main.scss */
+/* line 187, ../scss/main.scss */
 .tag-reg, .tag-vip, .tag-mod, .tag-admin, .tag-dev, .tag-super, .tag-owner {
   color: #fff !important;
   text-shadow: 0 0 3px #000, 0 0 3px #000, 0 0 3px #000;
@@ -168,104 +180,104 @@ ul.pageNav li.curPage span {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   font-family: 'Helvetica Condensed Bold';
 }
-/* line 182, ../scss/main.scss */
+/* line 196, ../scss/main.scss */
 .tag-reg:hover, .tag-vip:hover, .tag-mod:hover, .tag-admin:hover, .tag-dev:hover, .tag-super:hover, .tag-owner:hover {
   text-decoration: none;
   outline: 2px solid #9c9c9c;
 }
 
-/* line 188, ../scss/main.scss */
+/* line 202, ../scss/main.scss */
 .tag-reg {
   background: #e8e8e8;
   text-shadow: 1px 1px 2px #000, 0 0 2px #000;
 }
 
-/* line 193, ../scss/main.scss */
+/* line 207, ../scss/main.scss */
 .tag-vip {
   background: #ffe762;
 }
-/* line 196, ../scss/main.scss */
+/* line 210, ../scss/main.scss */
 .tag-vip:hover {
   outline: 2px solid #c8a900;
 }
 
-/* line 201, ../scss/main.scss */
+/* line 215, ../scss/main.scss */
 .tag-mod {
   background: #bdf04f;
 }
-/* line 203, ../scss/main.scss */
+/* line 217, ../scss/main.scss */
 .tag-mod:hover {
   outline: 2px solid #6d990d;
 }
 
-/* line 208, ../scss/main.scss */
+/* line 222, ../scss/main.scss */
 .tag-admin {
   background: #ff6262;
 }
-/* line 210, ../scss/main.scss */
+/* line 224, ../scss/main.scss */
 .tag-admin:hover {
   outline: 2px solid #c80000;
 }
 
-/* line 215, ../scss/main.scss */
+/* line 229, ../scss/main.scss */
 .tag-dev {
   background: #7ad8ff;
 }
-/* line 217, ../scss/main.scss */
+/* line 231, ../scss/main.scss */
 .tag-dev:hover {
   outline: 2px solid #009ee0;
 }
 
-/* line 222, ../scss/main.scss */
+/* line 236, ../scss/main.scss */
 .tag-super {
   background: #ba83ff;
 }
-/* line 224, ../scss/main.scss */
+/* line 238, ../scss/main.scss */
 .tag-super:hover {
   outline: 2px solid #6700e9;
 }
 
-/* line 229, ../scss/main.scss */
+/* line 243, ../scss/main.scss */
 .tag-owner {
   background: #5e5e5e;
 }
-/* line 231, ../scss/main.scss */
+/* line 245, ../scss/main.scss */
 .tag-owner:hover {
   outline: 2px solid #121212;
 }
 
-/* line 236, ../scss/main.scss */
+/* line 250, ../scss/main.scss */
 .rankTag {
   padding: 0 0.5em;
 }
-/* line 239, ../scss/main.scss */
+/* line 253, ../scss/main.scss */
 .rankTag:hover {
   outline: 0;
 }
-/* line 243, ../scss/main.scss */
+/* line 257, ../scss/main.scss */
 .rankTag.shortName {
   text-transform: uppercase;
 }
 
-/* line 248, ../scss/main.scss */
+/* line 262, ../scss/main.scss */
 .breadcrumbs {
   margin: 0;
   padding: 0;
   display: inline-block;
   float: left;
 }
-/* line 254, ../scss/main.scss */
+/* line 268, ../scss/main.scss */
 .breadcrumbs li {
   display: inline-block;
   list-style: none;
   padding: 0 1em 0 0;
 }
-/* line 259, ../scss/main.scss */
+/* line 273, ../scss/main.scss */
 .breadcrumbs li a {
   color: #25bfff;
   display: inline-block;
 }
-/* line 263, ../scss/main.scss */
+/* line 277, ../scss/main.scss */
 .breadcrumbs li ~ li:before {
   content: '>';
   color: #555;
@@ -277,7 +289,7 @@ ul.pageNav li.curPage span {
   vertical-align: middle;
 }
 
-/* line 277, ../scss/main.scss */
+/* line 291, ../scss/main.scss */
 #chatbox .chats {
   font-size: 0.8em;
   border: 1px solid #d8d8d8;
@@ -293,26 +305,26 @@ ul.pageNav li.curPage span {
   overflow-x: hidden;
   background: url(../images/noiseWhite.png) repeat left center;
 }
-/* line 291, ../scss/main.scss */
+/* line 305, ../scss/main.scss */
 #chatbox .chat ~ .chat {
   margin-top: 0.25em;
 }
-/* line 295, ../scss/main.scss */
+/* line 309, ../scss/main.scss */
 #chatbox .chat a.userLink {
   display: inline-block;
   font-family: Helvetica, serif;
   font-weight: bold;
   font-size: 0.8em;
 }
-/* line 312, ../scss/main.scss */
+/* line 326, ../scss/main.scss */
 #chatbox .chat-date {
   font-style: italic;
 }
-/* line 316, ../scss/main.scss */
+/* line 330, ../scss/main.scss */
 #chatbox .chat ~ .chat-date {
   margin-top: 1em;
 }
-/* line 320, ../scss/main.scss */
+/* line 334, ../scss/main.scss */
 #chatbox input {
   width: 100%;
   border: 1px solid #d8d8d8;
@@ -327,7 +339,7 @@ ul.pageNav li.curPage span {
   border-radius: 0 0 0.5em 0.5em;
 }
 
-/* line 330, ../scss/main.scss */
+/* line 344, ../scss/main.scss */
 .dimensions {
   position: absolute;
   display: inline-block;
@@ -337,22 +349,22 @@ ul.pageNav li.curPage span {
   padding: 0.5em;
   font-size: 0.8em;
 }
-/* line 339, ../scss/main.scss */
+/* line 353, ../scss/main.scss */
 .dimensions:hover {
   color: #fff;
 }
 
-/* line 344, ../scss/main.scss */
+/* line 358, ../scss/main.scss */
 .tinyImage {
   border: 2px solid #a54;
   cursor: pointer;
 }
-/* line 348, ../scss/main.scss */
+/* line 362, ../scss/main.scss */
 .tinyImage.expanded {
   max-width: none;
 }
 
-/* line 353, ../scss/main.scss */
+/* line 367, ../scss/main.scss */
 .missing42 {
   width: 42px;
   height: 42px;
@@ -360,7 +372,7 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==") no-repeat;
 }
 
-/* line 360, ../scss/main.scss */
+/* line 374, ../scss/main.scss */
 .missing52 {
   width: 42px;
   height: 42px;
@@ -368,22 +380,22 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0AQMAAAD/tomoAAAABlBMVEX4APgAAAAfdBzzAAAAKUlEQVR4Xt3PQQkAAAjAwIEBjGR1IxlAUEvoQxjce6DlUrHmZAlXfvtpTQiymQ2xdWAAAAAASUVORK5CYII=") no-repeat;
 }
 
-/* line 369, ../scss/main.scss */
+/* line 383, ../scss/main.scss */
 .modButton.active {
   background: url(../images/noiseBlue.png) repeat left center;
   z-index: 1000;
 }
 
-/* line 376, ../scss/main.scss */
+/* line 390, ../scss/main.scss */
 .modDropdown {
   display: inline-block;
   position: relative;
 }
-/* line 380, ../scss/main.scss */
+/* line 394, ../scss/main.scss */
 .modDropdown:hover {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
 }
-/* line 401, ../scss/main.scss */
+/* line 415, ../scss/main.scss */
 .modDropdown ul {
   display: none;
   position: absolute;
@@ -396,7 +408,7 @@ ul.pageNav li.curPage span {
   text-align: left;
   background: #222;
 }
-/* line 415, ../scss/main.scss */
+/* line 429, ../scss/main.scss */
 .modDropdown ul li a {
   color: #fff;
   display: block;
@@ -405,12 +417,12 @@ ul.pageNav li.curPage span {
   background: url(../images/noiseBlack.png) repeat left center;
   line-height: 32px;
 }
-/* line 423, ../scss/main.scss */
+/* line 437, ../scss/main.scss */
 .modDropdown ul li a:hover {
   background: url(../images/noiseBlue.png) repeat left center;
   text-decoration: none;
 }
-/* line 429, ../scss/main.scss */
+/* line 443, ../scss/main.scss */
 .modDropdown ul li.userActions {
   padding: 0 16px;
   line-height: 32px;
@@ -418,19 +430,19 @@ ul.pageNav li.curPage span {
   font-weight: bold;
   white-space: nowrap;
 }
-/* line 439, ../scss/main.scss */
+/* line 453, ../scss/main.scss */
 .modDropdown ul.mod-thread a {
   padding: 0 0.5em 0 0;
 }
 
 @-moz-keyframes spin {
-  /* line 448, ../scss/main.scss */
+  /* line 462, ../scss/main.scss */
   from {
     -moz-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 451, ../scss/main.scss */
+  /* line 465, ../scss/main.scss */
   to {
     -moz-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -438,13 +450,13 @@ ul.pageNav li.curPage span {
 }
 
 @-webkit-keyframes spin {
-  /* line 448, ../scss/main.scss */
+  /* line 462, ../scss/main.scss */
   from {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 451, ../scss/main.scss */
+  /* line 465, ../scss/main.scss */
   to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -452,13 +464,13 @@ ul.pageNav li.curPage span {
 }
 
 @-o-keyframes spin {
-  /* line 448, ../scss/main.scss */
+  /* line 462, ../scss/main.scss */
   from {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 451, ../scss/main.scss */
+  /* line 465, ../scss/main.scss */
   to {
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -466,13 +478,13 @@ ul.pageNav li.curPage span {
 }
 
 @-ms-keyframes spin {
-  /* line 448, ../scss/main.scss */
+  /* line 462, ../scss/main.scss */
   from {
     -ms-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 451, ../scss/main.scss */
+  /* line 465, ../scss/main.scss */
   to {
     -ms-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -480,18 +492,18 @@ ul.pageNav li.curPage span {
 }
 
 @keyframes spin {
-  /* line 448, ../scss/main.scss */
+  /* line 462, ../scss/main.scss */
   from {
     transform: rotate(0deg);
   }
 
-  /* line 451, ../scss/main.scss */
+  /* line 465, ../scss/main.scss */
   to {
     transform: rotate(360deg);
   }
 }
 
-/* line 456, ../scss/main.scss */
+/* line 470, ../scss/main.scss */
 .popupContainer {
   text-align: center;
   position: fixed;
@@ -504,7 +516,7 @@ ul.pageNav li.curPage span {
   z-index: 9998;
 }
 
-/* line 468, ../scss/main.scss */
+/* line 482, ../scss/main.scss */
 .popup {
   padding: 1em;
   width: 80%;
@@ -516,34 +528,34 @@ ul.pageNav li.curPage span {
   background: #eee;
 }
 
-/* line 479, ../scss/main.scss */
+/* line 493, ../scss/main.scss */
 .popupCloseLink {
   font-size: 0.75em;
 }
-/* line 482, ../scss/main.scss */
+/* line 496, ../scss/main.scss */
 .popupCloseLink:before {
   margin-top: 2em;
   content: '\a';
   display: block;
 }
 
-/* line 489, ../scss/main.scss */
+/* line 503, ../scss/main.scss */
 table {
   width: 100%;
 }
 
-/* line 497, ../scss/main.scss */
+/* line 511, ../scss/main.scss */
 a[target="_blank"]:after {
   content: " " url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAD1BMVEX///////////////////+Rd1MVAAAABHRSTlMAaeRqY+AomwAAADNJREFUeF4lxIEJACAMBLErdACRjuIAX/n9Z7IghEDYhlwkcGe7Z+Xac4cLnVKjkOCzLR6tNQaTLNDT1wAAAABJRU5ErkJggg==");
   white-space: pre;
 }
 
-/* line 503, ../scss/main.scss */
+/* line 517, ../scss/main.scss */
 a.sprite[target="_blank"]:after {
   display: none;
 }
 
-/* line 507, ../scss/main.scss */
+/* line 521, ../scss/main.scss */
 .login {
   width: 154px;
   height: 23px;
@@ -554,7 +566,7 @@ a.sprite[target="_blank"]:after {
   color: transparent;
 }
 
-/* line 517, ../scss/main.scss */
+/* line 531, ../scss/main.scss */
 .curse {
   font-weight: bold;
   -webkit-filter: blur(1px);
@@ -564,7 +576,7 @@ a.sprite[target="_blank"]:after {
   text-shadow: 0 0 0.25em #ccc, 0 0 0.5em #ccc;
 }
 
-/* line 524, ../scss/main.scss */
+/* line 538, ../scss/main.scss */
 input {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -577,7 +589,7 @@ input {
   border-width: 2px 0px 0px 1px;
 }
 
-/* line 529, ../scss/main.scss */
+/* line 543, ../scss/main.scss */
 textarea {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -590,7 +602,7 @@ textarea {
   border-width: 3px 0px 0px 2px;
 }
 
-/* line 534, ../scss/main.scss */
+/* line 548, ../scss/main.scss */
 input[type="submit"], button {
   padding: 0.5em 1em;
   border-style: solid;
@@ -605,7 +617,7 @@ input[type="submit"], button {
   margin: 0 0 2px 0;
   vertical-align: top;
 }
-/* line 541, ../scss/main.scss */
+/* line 555, ../scss/main.scss */
 input[type="submit"]:focus, button:focus {
   border-style: solid;
   border-color: #e0e0e0;
@@ -618,29 +630,29 @@ input[type="submit"]:focus, button:focus {
   margin: 2px 0 0 0;
 }
 
-/* line 547, ../scss/main.scss */
+/* line 561, ../scss/main.scss */
 .admin-form {
   display: block;
   clear: both;
 }
-/* line 551, ../scss/main.scss */
+/* line 565, ../scss/main.scss */
 .admin-form input {
   display: block;
 }
 
-/* line 566, ../scss/main.scss */
+/* line 580, ../scss/main.scss */
 .form-labels {
   width: 320px;
   float: left;
   margin: 20px 0;
 }
-/* line 571, ../scss/main.scss */
+/* line 585, ../scss/main.scss */
 .form-labels > div {
   position: relative;
   overflow: hidden;
   margin: 1em 0;
 }
-/* line 578, ../scss/main.scss */
+/* line 592, ../scss/main.scss */
 .form-labels .labels input, .form-labels .labels textarea {
   width: 100%;
   border-style: solid;
@@ -659,7 +671,7 @@ input[type="submit"]:focus, button:focus {
   padding: 12px;
   outline: 0;
 }
-/* line 589, ../scss/main.scss */
+/* line 603, ../scss/main.scss */
 .form-labels .labels input:focus, .form-labels .labels input:valid, .form-labels .labels textarea:focus, .form-labels .labels textarea:valid {
   border-style: solid;
   border-color: #e0e0e0;
@@ -671,7 +683,7 @@ input[type="submit"]:focus, button:focus {
   border-width: 2px 2px 2px 2px;
   padding: 4px 6px 20px 6px;
 }
-/* line 594, ../scss/main.scss */
+/* line 608, ../scss/main.scss */
 .form-labels .labels input:focus + label, .form-labels .labels input:valid + label, .form-labels .labels textarea:focus + label, .form-labels .labels textarea:valid + label {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
   color: white;
@@ -682,7 +694,7 @@ input[type="submit"]:focus, button:focus {
   top: 100%;
   margin-top: -16px;
 }
-/* line 605, ../scss/main.scss */
+/* line 619, ../scss/main.scss */
 .form-labels .labels input:focus, .form-labels .labels textarea:focus {
   border-style: solid;
   -moz-border-image: url(../images/noiseBlue.png) 2 2 2 2 repeat repeat;
@@ -692,11 +704,11 @@ input[type="submit"]:focus, button:focus {
   border-image: url(../images/noiseBlue.png) 2 2 2 2 repeat repeat;
   border-width: 2px 2px 2px 2px;
 }
-/* line 609, ../scss/main.scss */
+/* line 623, ../scss/main.scss */
 .form-labels .labels input:focus + label, .form-labels .labels textarea:focus + label {
   background: url(../images/noiseBlue.png) repeat left center;
 }
-/* line 614, ../scss/main.scss */
+/* line 628, ../scss/main.scss */
 .form-labels .labels label {
   transition: background 0.2s, color 0.2s, top 0.2s, bottom 0.2s, right 0.2s, left 0.2s;
   position: absolute;
@@ -708,7 +720,7 @@ input[type="submit"]:focus, button:focus {
   left: 0;
   width: 100%;
 }
-/* line 625, ../scss/main.scss */
+/* line 639, ../scss/main.scss */
 .form-labels .labels textarea {
   display: block;
   resize: vertical;
