--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -39,15 +39,29 @@ a {
 
 .alert-success {
   @include noise("Green");
+
   color: #fff;
+  font-weight: bold;
+  //text-shadow: 1px 1px 0.25em rgba(#000, 0.75);
+  text-shadow: 1px 1px 0.25em rgba(#000, 0.5);
+  position: relative;
+  padding-left: 40px;
 
   &:before {
     @include noise(Notice, no-repeat);
     content: '';
     display: inline-block;
-    width: 34px;
-    height: 17px;
+    width: 28px;
+    height: 26px;
     vertical-align: text-bottom;
+    position: absolute;
+    left: 9px;
+    top: 11px;
+  }
+
+  a {
+    text-decoration: underline;
+    color: #fff;
   }
 }
 
@@ -240,7 +254,7 @@ $owner: #5e5e5e;
     outline: 0;
   }
 
-  &.shortName{
+  &.shortName {
     text-transform: uppercase;
   }
 }
